fixed gap on frontpage in the what is dassco section between the header and the text, added lightblue background to text on organisations, changed padding on all buttons to always be 2 rem for a better and more consistent look

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -126,7 +126,7 @@ body {
 .button {
   background-color: #001972;
   border-radius: 100px;
-  padding: var(--padding-small);
+  padding: 2rem;
   box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.3);
   line-height:1.25rem;
   width: fit-content;
@@ -216,10 +216,6 @@ footer {
     padding: var(--padding-medium);
   }
 
-  .button {
-    padding: var(--padding-medium);
-  }
-
   .padding {
     padding: var(--padding-medium);
   }
@@ -243,10 +239,6 @@ footer {
   .container {
     max-width: var(--max-width-desktop);
     padding: var(--padding-large);
-  }
-
-  .button {
-    padding: var(--padding-large)
   }
 
   .padding {
