--- a/_sass/pages/_myhome.scss
+++ b/_sass/pages/_myhome.scss
@@ -112,6 +112,7 @@
   h3 {
     font-size: 1.25rem;
     font-weight: 600;
+    margin-bottom: 1rem;
   }
 
   p {
