--- a/_sass/pages/_organisations.scss
+++ b/_sass/pages/_organisations.scss
@@ -28,6 +28,9 @@
     */
 
     .organisation {
+        display:grid;
+        gap: 1rem;
+
         > div {
             display:grid;
             align-items: center;
@@ -37,6 +40,13 @@
 
         img {
             max-height: 10rem;
+        }
+
+        p {
+            background-color: var(--color-background-lightblue);
+            padding: 1rem;
+            border-radius: 1rem;
+            box-shadow: 0px 10px 60px 0px rgba(1, 33, 92, 0.1);
         }
     }
 
